<resources>
    <string name="app_name">Decorafacil</string>
    <string name="logo_decorafacil_image_description">Logo DecoraFacil</string>
    <string name="edit_text_hint_email">E-mail</string>
    <string name="edit_text_hint_password">Senha</string>
    <string name="button_login">Entrar</string>
    <string name="checkbox_keep_logged">Manter-me logado</string>
    <string name="text_view_forgot_password">Esqueceu?</string>
    <string name="text_view_nao_possui_conta">Não possui conta?</string>
    <string name="text_view_create_account">CRIAR CONTA</string>
    <string name="logo_g4">Logo G4</string>
    <string name="card_button_new_event">Novo Evento</string>
    <string name="new_event_icon_description">Ícone de novo evento</string>
    <string name="card_button_schedule">Agenda</string>
    <string name="card_button_financial">Financeiro</string>
    <string name="schedule_icon_description">Ícone de agenda</string>
    <string name="financial_icon_description">Ícone de cifrão do dólar</string>
    <string name="textview_pagamentos_pendentes">Pagamentos pendentes:</string>
    <string name="textview_proximos_eventos">Próximos eventos:</string>
    <string name="eye_hide_values_icon_description">Ícone de olho para esconder valores</string>
    <string name="help_text_new_event_form_step_one">Adicione as informações do <b>Contratante</b> do seu evento</string>
    <string name="new_event_personal_information">Informações pessoais</string>
    <string name="new_event_client_name">Nome</string>
    <string name="new_event_client_cpf">CPF</string>
    <string name="new_event_client_phone_number">Telefone</string>
    <string name="new_event_client_email">E-mail</string>
    <string name="new_event_top_bar_title">Novo Evento</string>
    <string name="next_button">PRÓXIMO</string>
    <string name="textview_user">Usuário</string>
    <string name="edit_text_hint_fantasy_name">Nome fantasia</string>
    <string name="textview_personal_information">INFORMAÇÕES PESSOAIS:</string>
    <string name="edit_text_hint_name">Nome</string>
    <string name="edit_text_hint_cpf">CPF</string>
    <string name="edit_text_hint_phone_number">Telefone</string>
    <string name="edit_text_hint_address">Endereço</string>
    <string name="edit_text_hint_complement">Complemento</string>
    <string name="edit_text_hint_city">Cidade</string>
    <string name="button_save">Salvar</string>
    <string name="edit_text_hint_street_address">Logradouro</string>
    <string name="edit_text_hint_number_address">Número</string>
    <string name="edit_text_hint_neighborhood">Bairro</string>
    <string name="textview_information_address">ENDEREÇO:</string>
    <string name="textview_information_password">SENHA:</string>
    <string name="edit_text_hint_confirm_password">Confirmar senha</string>
    <string name="help_text_new_event_form_step_two">Adicione as informações do seu <b>Evento</b></string>
    <string name="new_event_event_information">Local do evento:</string>
    <string name="new_event_event_street">Logradouro</string>
    <string name="new_event_district">Bairro</string>
    <string name="new_event_place_number">Número</string>
    <string name="new_event_city">Cidade</string>
    <string name="new_event_complement">Complemento</string>
    <string name="new_event_state">Estado</string>
    <string name="event_default_state">São Paulo</string>
    <string name="new_event_event_birthday_person_info">Aniversariante:</string>
    <string name="new_event_date">Data</string>
    <string name="new_event_time_start">Horário de início</string>
    <string name="new_event_end_time">Horário de término</string>
    <string name="new_event_birthday_person_name">Nome do aniversariante</string>
    <string name="new_event_birthday_person_age">Idade a completar</string>
    <string name="help_text_new_event_form_step_three">Adicione as informações dos <b>Serviços</b> contratados</string>
    <string name="new_event_services">Serviços:</string>
    <string name="new_event_service_description">Descrição</string>
    <string name="new_event_service_value">Valor</string>
    <string name="new_event_add_service">ADICIONAR</string>
    <string name="new_event_payment">Pagamento:</string>
    <string name="new_event_total">Total</string>
    <string name="new_event_signal">Sinal</string>
    <string name="new_event_remaining">Restante</string>
    <string name="save_event">SALVAR</string>
    <string name="new_event_event_datetime_infos">Data e hora:</string>
    <string name="new_event_event_zip_code">CEP</string>
    <string name="edit_text_hint_cep">CEP</string>
    <string name="schedule_top_bar">Agenda</string>
    <string name="text_view_title_forgot_password">Esqueci minha senha:</string>
    <string name="text_view_alert_phrase_pt_one">Para sua segurança enviaremos um código</string>
    <string name="text_view_alert_phrase_pt_two">para validar sua redefinição de senha</string>
    <string name="button_send_code">Enviar Código</string>
    <string name="button_dialog_edit">Editar</string>
    <string name="button_dialog_cancel_event">Cancelar Evento</string>
    <string name="button_dialog_back">Voltar</string>
    <string name="text_view_password_reset">Redefinição de senha</string>
    <string name="text_view_insert_the_code">Insira o código recebido por e-mail</string>
    <string name="button_change_password">Alterar senha</string>
    <string name="edit_text_hint_new_password">Nova senha</string>
    <string name="empty_message">Não há eventos no dia selecionado</string>
    <string name="textview_financial">Financeiro</string>
    <string name="textview_received">Recebidos:</string>
    <string name="textview_to_receive">A Receber:</string>
    <string name="textview_canceled">Cancelados:</string>
</resources>