<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF2FA">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#09184D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewHelloMessageTopBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/inter"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Olá, Juju Family Fest" />

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/button_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/buttonNewEvent"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_margin="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/buttonSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/new_event_icon_description"
                android:src="@drawable/new_event_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/inter"
                android:text="@string/card_button_new_event"
                android:textColor="#808085"
                android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/buttonSchedule"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_margin="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/buttonFinancial"
        app:layout_constraintStart_toEndOf="@id/buttonNewEvent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/schedule_icon_description"
                android:src="@drawable/schedule_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/inter"
                android:text="@string/card_button_schedule"
                android:textColor="#808085"
                android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/buttonFinancial"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_margin="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSchedule"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/financial_icon_description"
                android:src="@drawable/financial_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/inter"
                android:text="@string/card_button_financial"
                android:textColor="#808085"
                android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textViewPagamentosPendentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter"
        android:gravity="start"
        android:text="@string/textview_pagamentos_pendentes"
        android:textColor="#2F2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonNewEvent" />

    <ImageView
        android:id="@+id/imageViewEyeHideValues"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/eye_hide_values_icon_description"
        android:focusable="true"
        android:src="@drawable/eye_hidden_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/textViewPagamentosPendentes"
        app:layout_constraintTop_toBottomOf="@id/buttonFinancial" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPendingPayments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPagamentosPendentes"
        tools:itemCount="10"
        tools:listitem="@layout/pending_payment_card" />

    <TextView
        android:id="@+id/textViewProximosEventos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter"
        android:gravity="start"
        android:text="@string/textview_proximos_eventos"
        android:textColor="#2F2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/recyclerViewPendingPayments"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/recyclerViewPendingPayments"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewPendingPayments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNextEvents"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textViewProximosEventos"
        app:layout_constraintStart_toStartOf="@id/textViewProximosEventos"
        app:layout_constraintTop_toBottomOf="@id/textViewProximosEventos"
        app:layout_constraintVertical_bias="0"
        tools:itemCount="15"
        tools:listitem="@layout/event_card" />

</androidx.constraintlayout.widget.ConstraintLayout>